@@ -6,6 +6,7 @@
 \alias{include_2017}
 \alias{include_2019}
 \alias{include_2022}
+\alias{include_2024}
 
 \docType{data}
 \title{
@@ -15,6 +16,7 @@ Inclusion Codes
 Data sets containing codes that determine which countries are to be included into a simulation or/and projections. 
 }
 \usage{
+data(include_2024)
 data(include_2022)
 data(include_2019)
 data(include_2017)
