@@ -10,10 +10,12 @@ The function creates two files containing projection summaries, such as the medi
 }
 \usage{
 write.projection.summary(dir = file.path(getwd(), "bayesTFR.output"), 
-    output.dir = NULL, revision = NULL, adjusted = FALSE, est.uncertainty = FALSE, \dots)
+    subdir = "predictions", output.dir = NULL, revision = NULL, adjusted = FALSE, 
+    est.uncertainty = FALSE, \dots)
 }
 \arguments{
   \item{dir}{Directory containing the prediction object. It should correspond to the \code{output.dir} argument of the \code{\link{tfr.predict}} function.}
+  \item{subdir}{Subdirectory of \code{dir} containing the predictions.}
   \item{output.dir}{Directory in which the resulting file will be stored. If \code{NULL} the same directory is used as for the prediction.}
   \item{revision}{UN WPP revision number. If \code{NULL} it is determined from the corresponding WPP year: WPP 2008 corresponds to revision 13, every subsequent WPP increases the revision number by one. Used as a constant in the second file only.}
   \item{adjusted}{Logical. By default the function writes summary using the original BHM projections. If the projection medians are adjusted (using e.g. \code{\link{tfr.median.set}}), setting this argument to \code{TRUE} causes writing the adjusted projections.}
