@@ -1,5 +1,8 @@
 7.4-2.90xx (2024-09-26)
 -----
+Added option of keeping multiple predictions directories in one simulation directory
+(argument "subdir" added to various functions).
+
 Added option of shifting projection to wpp by matching means. 
 
 Added dataset include_2024.
